--- a/worklenz-frontend/.env.development
+++ b/worklenz-frontend/.env.development
@@ -17,6 +17,9 @@ VITE_WORKLENZ_SESSION_ID=worklenz-session-id
 # Google Login
 VITE_ENABLE_GOOGLE_LOGIN=false
 
+# Discord Login
+VITE_ENABLE_DISCORD_LOGIN=true
+
 # Survey Modal Configuration
 # Set to true to enable the survey modal, false to disable it
 VITE_ENABLE_SURVEY_MODAL=false
